added more controller, service/service impl, and some front end js/html/css

--- a/BluePix/src/main/resources/static/css/main.css
+++ b/BluePix/src/main/resources/static/css/main.css
@@ -3,3 +3,12 @@
 body{
 	background-color: teal
 }
+
+.hoverText {
+  display: none;
+}
+
+.buttonHov:hover + .hoverText {
+  display: block;
+  color: black;
+}
