--- a/ngBluePix/src/app/components/home/home.component.html
+++ b/ngBluePix/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 <!-- This is the nav bar area
  TODOS: implement a ---- search bar --- User tab --- login --- view profile --- -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light custom-navbar">
@@ -13,14 +13,27 @@
 
     </ul>
   </div>
+
+  <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+
+    <ul class="navbar-nav">
+      <li class="nav-item">
+
+            <div class="col-md-10">
+              <div class="search-container">
+                <input type="text" class="form-control search-input" placeholder="Search...">
+                <i class="fas fa-search search-icon"></i>
+              </div>
+            </div>
+
+      </li>
+
+    </ul>
+  </div>
 </nav>
 
 <!-- This is the three column section -->
-<div id="newPostDiv">
-  <form id="newPostDisplay"></form>
-</div>
 
-<hr>
 <div class="row">
   <!-- Left Side Column -->
   <div class="col-md-2 col-12 side-col-color p-3">
@@ -28,14 +41,33 @@
   </div>
 
   <!-- Center Column (Main Content) -->
-  <div class="col-md-8 col-12 p-4 border border-secondary shadow-lg pop-out">
+  <div class="col-md-8 col-12 p-4 border border-dark shadow-lg pop-out">
+    <div class="post-header">
+      <h3>Posts</h3>
+      <button type="button" id="newPostButton" class="btn btn-dark"
+       (click)="showAddingPost = !showAddingPost">+</button>
+    </div>
+                  <!-- Adding a new Post Section -->
+     <div class="add-post-container" *ngIf="showAddingPost">
+        <form class="add-post-form">
+            <input type="text" name="title" [(ngModel)]="newPost.title" placeholder="Enter Post Title" class="form-input" />
 
+            <textarea name="description" [(ngModel)]="newPost.description" placeholder="Enter Post Description" class="form-textarea"></textarea>
+
+            <input type="text" name="imageUrl" [(ngModel)]="newPost.imageUrl" placeholder="Enter Image URL (Optional)" class="form-input" />
+
+            <button type="button" (click)="addingPost(newPost)" class="btn btn-outline-dark submit-button"> Add Post </button>
+          </form>
+        </div>
+    <hr>
     <!-- logic for printing out posts -->
     <div *ngFor="let post of posts">
-      {{post.title}}<br>
+      <div class="container border border-secondary shadow-lg pop-out">
+      <h4>{{post.title}}</h4>
       {{post.description}}<br>
-      <img src="{{post.imageUrl}}">
-      <hr>
+      <img *ngIf="post.imageUrl" [src]="post.imageUrl">
+    </div>
+      <br>
     </div>
 
   </div>
